ffm does not work

--- a/MetricsOnValidationSet_retweet_comment.ipynb
+++ b/MetricsOnValidationSet_retweet_comment.ipynb
@@ -4,19 +4,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "unable to import 'smart_open.gcs', disabling that module\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import s3fs\n",
-    "from smart_open import open\n",
     "import boto3\n",
     "from io import StringIO # python3; python2: BytesIO \n",
     "from boto3.s3.transfer import TransferConfig\n",
@@ -201,6 +192,81 @@
    ],
    "source": [
     "rce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_df = pd.read_csv\\\n",
+    "('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/retweet_with_comment/val_set_gt.csv',\\\n",
+    " names = ['retweet_with_comment_bool'])\n",
+    "gt = list(gt_df.retweet_with_comment_bool)\n",
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/retweet_with_comment/val_set_result_sgd.csv',\\\n",
+    "                      names = ['probability_retweet_with_comment'])\n",
+    "pr = list(pr_df.probability_retweet_with_comment)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.023683919635709903"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-5.630098535096306"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_df = pd.read_csv\\\n",
+    "('/home/ubuntu/recsys_challenge_2020/classification_type_models/ffm/retweeet_with_comment/val_set_gt.csv',\\\n",
+    " names = ['retweet_with_comment_bool'])\n",
+    "gt = list(gt_df.retweet_with_comment_bool)\n",
+    "pr_df = pd.read_csv\\\n",
+    "('/home/ubuntu/recsys_challenge_2020/classification_type_models/ffm/retweeet_with_comment/val_set.output',\\\n",
+    "                      names = ['probability_retweet_with_comment'])\n",
+    "pr = list(pr_df.probability_retweet_with_comment)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
    ]
   }
  ],
