--- a/classification_type_models/ffm_basefile.ipynb
+++ b/classification_type_models/ffm_basefile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,38 +11,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "val = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/val_set.csv.libfm'\\\n",
-    "                  , sep = ' ', header = None\\\n",
-    "                 , usecols = [1,2,3,4,5,6,7,8,9,10,11])\n",
-    "train = pd.read_csv(\"s3://recsys-challenge-2020/training.tsv\", encoding=\"utf-8\",\n",
-    "                    names = all_features, usecols= [1, 6, 7, 8, 9, 10, 11, 12, 14, 15, 16, 17, 19, 23], sep=\"\\x01\")"
+    "val = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/base_val_set.csv'\\\n",
+    "                  , sep = ' ', header = None)\n",
+    "# train = pd.read_csv(\"s3://recsys-challenge-2020/training.tsv\", encoding=\"utf-8\",\n",
+    "#                     names = all_features, usecols= [1, 6, 7, 8, 9, 10, 11, 12, 14, 15, 16, 17, 19, 23], sep=\"\\x01\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>21</th>\n",
+       "      <th>22</th>\n",
+       "      <th>23</th>\n",
+       "      <th>24</th>\n",
+       "      <th>25</th>\n",
+       "      <th>26</th>\n",
+       "      <th>27</th>\n",
+       "      <th>28</th>\n",
+       "      <th>29</th>\n",
+       "      <th>30</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4:1</td>\n",
+       "      <td>98:1</td>\n",
+       "      <td>32654830:1</td>\n",
+       "      <td>15:1</td>\n",
+       "      <td>918310:1</td>\n",
+       "      <td>9:1</td>\n",
+       "      <td>10:1</td>\n",
+       "      <td>0:0.00011045594428133323</td>\n",
+       "      <td>1:8.994755158267215e-07</td>\n",
+       "      <td>2:5.511350050371348e-06</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40578738:-0.04695393</td>\n",
+       "      <td>40578739:-0.0661779</td>\n",
+       "      <td>40578740:-0.14400975</td>\n",
+       "      <td>40578741:0.07563489</td>\n",
+       "      <td>40578742:0.00505823</td>\n",
+       "      <td>40578743:0.02484251</td>\n",
+       "      <td>40578744:0.00650671</td>\n",
+       "      <td>40578745:-0.0075885</td>\n",
+       "      <td>40578746:0.00083633</td>\n",
+       "      <td>40578747:0.08590803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4:1</td>\n",
+       "      <td>98:1</td>\n",
+       "      <td>267065:1</td>\n",
+       "      <td>15:1</td>\n",
+       "      <td>23143401:1</td>\n",
+       "      <td>9:1</td>\n",
+       "      <td>10:1</td>\n",
+       "      <td>0:3.812494464679185e-06</td>\n",
+       "      <td>1:3.148164305393525e-05</td>\n",
+       "      <td>2:0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40578738:0.0751254</td>\n",
+       "      <td>40578739:0.06237275</td>\n",
+       "      <td>40578740:-0.1542462</td>\n",
+       "      <td>40578741:0.01070223</td>\n",
+       "      <td>40578742:0.00974472</td>\n",
+       "      <td>40578743:0.02247174</td>\n",
+       "      <td>40578744:0.10506382</td>\n",
+       "      <td>40578745:-0.00116375</td>\n",
+       "      <td>40578746:0.03236366</td>\n",
+       "      <td>40578747:-0.00980233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>200:1</td>\n",
+       "      <td>11:1</td>\n",
+       "      <td>14377663:1</td>\n",
+       "      <td>15:1</td>\n",
+       "      <td>12305912:1</td>\n",
+       "      <td>9:1</td>\n",
+       "      <td>20:1</td>\n",
+       "      <td>0:2.837205183017068e-06</td>\n",
+       "      <td>1:0.00012682604773156772</td>\n",
+       "      <td>2:1.8861882476229153e-06</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40578738:0.01538859</td>\n",
+       "      <td>40578739:0.03916452</td>\n",
+       "      <td>40578740:-0.15879032</td>\n",
+       "      <td>40578741:-0.03995284</td>\n",
+       "      <td>40578742:-0.00597963</td>\n",
+       "      <td>40578743:-0.03479253</td>\n",
+       "      <td>40578744:-0.00176516</td>\n",
+       "      <td>40578745:-0.02252353</td>\n",
+       "      <td>40578746:-0.0219298</td>\n",
+       "      <td>40578747:0.05133973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4:1</td>\n",
+       "      <td>91:1</td>\n",
+       "      <td>38028896:1</td>\n",
+       "      <td>15:1</td>\n",
+       "      <td>3679496:1</td>\n",
+       "      <td>9:1</td>\n",
+       "      <td>20:1</td>\n",
+       "      <td>0:6.552170719530041e-06</td>\n",
+       "      <td>1:5.1045235523166443e-05</td>\n",
+       "      <td>2:1.9873983487148765e-06</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40578738:-0.04695393</td>\n",
+       "      <td>40578739:-0.0661779</td>\n",
+       "      <td>40578740:-0.14400975</td>\n",
+       "      <td>40578741:0.07563489</td>\n",
+       "      <td>40578742:0.00505823</td>\n",
+       "      <td>40578743:0.02484251</td>\n",
+       "      <td>40578744:0.00650671</td>\n",
+       "      <td>40578745:-0.0075885</td>\n",
+       "      <td>40578746:0.00083633</td>\n",
+       "      <td>40578747:0.08590803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>200:1</td>\n",
+       "      <td>98:1</td>\n",
+       "      <td>3804299:1</td>\n",
+       "      <td>15:1</td>\n",
+       "      <td>4647308:1</td>\n",
+       "      <td>9:1</td>\n",
+       "      <td>10:1</td>\n",
+       "      <td>0:0.0002472358329013467</td>\n",
+       "      <td>1:2.2486887895668035e-05</td>\n",
+       "      <td>2:1.343334069038759e-06</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40578738:-0.04695393</td>\n",
+       "      <td>40578739:-0.0661779</td>\n",
+       "      <td>40578740:-0.14400975</td>\n",
+       "      <td>40578741:0.07563489</td>\n",
+       "      <td>40578742:0.00505823</td>\n",
+       "      <td>40578743:0.02484251</td>\n",
+       "      <td>40578744:0.00650671</td>\n",
+       "      <td>40578745:-0.0075885</td>\n",
+       "      <td>40578746:0.00083633</td>\n",
+       "      <td>40578747:0.08590803</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0     1           2     3           4    5     6   \\\n",
+       "0    4:1  98:1  32654830:1  15:1    918310:1  9:1  10:1   \n",
+       "1    4:1  98:1    267065:1  15:1  23143401:1  9:1  10:1   \n",
+       "2  200:1  11:1  14377663:1  15:1  12305912:1  9:1  20:1   \n",
+       "3    4:1  91:1  38028896:1  15:1   3679496:1  9:1  20:1   \n",
+       "4  200:1  98:1   3804299:1  15:1   4647308:1  9:1  10:1   \n",
+       "\n",
+       "                         7                         8   \\\n",
+       "0  0:0.00011045594428133323   1:8.994755158267215e-07   \n",
+       "1   0:3.812494464679185e-06   1:3.148164305393525e-05   \n",
+       "2   0:2.837205183017068e-06  1:0.00012682604773156772   \n",
+       "3   0:6.552170719530041e-06  1:5.1045235523166443e-05   \n",
+       "4   0:0.0002472358329013467  1:2.2486887895668035e-05   \n",
+       "\n",
+       "                         9   ...                    21                   22  \\\n",
+       "0   2:5.511350050371348e-06  ...  40578738:-0.04695393  40578739:-0.0661779   \n",
+       "1                     2:0.0  ...    40578738:0.0751254  40578739:0.06237275   \n",
+       "2  2:1.8861882476229153e-06  ...   40578738:0.01538859  40578739:0.03916452   \n",
+       "3  2:1.9873983487148765e-06  ...  40578738:-0.04695393  40578739:-0.0661779   \n",
+       "4   2:1.343334069038759e-06  ...  40578738:-0.04695393  40578739:-0.0661779   \n",
+       "\n",
+       "                     23                    24                    25  \\\n",
+       "0  40578740:-0.14400975   40578741:0.07563489   40578742:0.00505823   \n",
+       "1   40578740:-0.1542462   40578741:0.01070223   40578742:0.00974472   \n",
+       "2  40578740:-0.15879032  40578741:-0.03995284  40578742:-0.00597963   \n",
+       "3  40578740:-0.14400975   40578741:0.07563489   40578742:0.00505823   \n",
+       "4  40578740:-0.14400975   40578741:0.07563489   40578742:0.00505823   \n",
+       "\n",
+       "                     26                    27                    28  \\\n",
+       "0   40578743:0.02484251   40578744:0.00650671   40578745:-0.0075885   \n",
+       "1   40578743:0.02247174   40578744:0.10506382  40578745:-0.00116375   \n",
+       "2  40578743:-0.03479253  40578744:-0.00176516  40578745:-0.02252353   \n",
+       "3   40578743:0.02484251   40578744:0.00650671   40578745:-0.0075885   \n",
+       "4   40578743:0.02484251   40578744:0.00650671   40578745:-0.0075885   \n",
+       "\n",
+       "                    29                    30  \n",
+       "0  40578746:0.00083633   40578747:0.08590803  \n",
+       "1  40578746:0.03236366  40578747:-0.00980233  \n",
+       "2  40578746:-0.0219298   40578747:0.05133973  \n",
+       "3  40578746:0.00083633   40578747:0.08590803  \n",
+       "4  40578746:0.00083633   40578747:0.08590803  \n",
+       "\n",
+       "[5 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_val = pd.DataFrame({col:str(int(col) - 1)+':' for col in val}, index=val.index) + val.astype(str) "
+    "base_val = pd.DataFrame({col:str(int(col))+':' for col in val}, index=val.index) + val.astype(str) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,15 +302,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "chunksize = 10 ** 7\n",
-    "for chunk in pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/train_set.csv.libfm'\\\n",
+    "for chunk in pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/base_train_set.csv'\\\n",
     "                  , sep = ' ', header = None\\\n",
-    "                 , usecols = [1,2,3,4,5,6,7,8,9,10,11], chunksize=chunksize):\n",
-    "    base_chunk = pd.DataFrame({col:str(int(col) - 1)+':' for col in chunk}, index=chunk.index) + chunk.astype(str) \n",
+    "                 , chunksize=chunksize):\n",
+    "    base_chunk = pd.DataFrame({col:str(int(col))+':' for col in chunk}, index=chunk.index) + chunk.astype(str) \n",
     "    base_chunk.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/ffm/f1/base_train.csv',\\\n",
     "                index = False, header = False, sep = ' ',  mode='a')"
    ]
