--- a/fast_text_embeddings/textfeaturesusingfasttextembeddings-train_set.ipynb
+++ b/fast_text_embeddings/textfeaturesusingfasttextembeddings-train_set.ipynb
@@ -164,13 +164,41 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14000000\n",
+      "15000000\n"
+     ]
     }
    ],
    "source": [
     "for chunk in np.array_split(lang_embedding_train,20):\n",
     "    chunk_embeddings_list = pd.DataFrame()\n",
     "    chunk_embeddings_list = chunk.swifter.apply(lambda x: f(x.language, x.sentence_embedding, x.name), axis=1, result_type='expand')\n",
-    "    chunk_embeddings_list.to_csv('lang_embedd_train_set.csv', header = False, index = False, mode = 'a')"
+    "    chunk_embeddings_list.to_csv('lang_embedd_train_set.csv', header = False, index = False, mode = 'a', sep = ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "133267714"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lang_embedding_train)"
    ]
   }
  ],
