--- a/fast_text_embeddings/textfeaturesusingfasttextembeddings.ipynb
+++ b/fast_text_embeddings/textfeaturesusingfasttextembeddings.ipynb
@@ -271,7 +271,7 @@
    "outputs": [],
    "source": [
     "lang_embedding_val.drop(['sentence_embedding', 'language'], axis=1).to_csv('lang_embedd_val.csv',\\\n",
-    "                                                                           header = False, index = False)"
+    "                                                                           header = False, index = False, sep = ' ')"
    ]
   },
   {
