--- a/MetricsOnValidationSet_retweet_comment.ipynb
+++ b/MetricsOnValidationSet_retweet_comment.ipynb
@@ -268,6 +268,46 @@
     "prauc = metrics.compute_prauc(pr,gt)\n",
     "rce = metrics.compute_rce(pr,gt)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.017824040495010313"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0459072186959424"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
   }
  ],
  "metadata": {
