--- a/MetricsOnValidationSet_retweet.ipynb
+++ b/MetricsOnValidationSet_retweet.ipynb
@@ -256,6 +256,76 @@
    "source": [
     "rce"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/ft_embedding_based_features/ffm/retweet/val_set_gt.csv',\\\n",
+    "            names = ['ground_truth'])\n",
+    "gt = list(gt_df.ground_truth)\n",
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/ft_embedding_based_features/ffm/retweet/val_set.output',\\\n",
+    "                      names = ['probability_retweet'])\n",
+    "pr = list(pr_df.probability_retweet)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### ./ffm-train -p ../../ft_embedding_based_features/ffm/retweet/val_set.ffm -l 0.0002 --auto-stop -s 96 ../../ft_embedding_based_features/ffm/retweet/train_set.ffm\n",
+    "##### ./ffm-predict ../../ft_embedding_based_features/ffm/retweet/val_set.ffm train_set.ffm.model ../../ft_embedding_based_features/ffm/retweet/val_set.output\n",
+    "##### iter   tr_logloss   va_logloss      tr_time\n",
+    "#####   1      0.29747      0.25389       1129.7\n",
+    "#####   2      0.24647      0.24008       2212.0\n",
+    "#####   3      0.21755      0.23859       3215.6\n",
+    "#####   4      0.19949      0.24003\n",
+    "##### Auto-stop. Use model at 3th iteration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.49112814598621485"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25.663740331606256"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
   }
  ],
  "metadata": {
