--- a/MetricsOnValidationSet_like.ipynb
+++ b/MetricsOnValidationSet_like.ipynb
@@ -4,19 +4,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "unable to import 'smart_open.gcs', disabling that module\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import s3fs\n",
-    "from smart_open import open\n",
     "import boto3\n",
     "from io import StringIO # python3; python2: BytesIO \n",
     "from boto3.s3.transfer import TransferConfig\n",
@@ -861,12 +852,146 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/ft_embedding_based_features/ffm/like/val_set_gt.csv',\\\n",
+    "            names = ['ground_truth'])\n",
+    "gt = list(gt_df.ground_truth)\n",
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/ft_embedding_based_features/ffm/like/val_set.output',\\\n",
+    "                      names = ['probability_retweet'])\n",
+    "pr = list(pr_df.probability_retweet)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Next thing to try: ALS with increased number of iterations\n",
-    "\n",
-    "##### ./libFM -task c -train /home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/train_set_replaced.csv.libfm -test /home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/val_set_replaced.csv.libfm -dim 1,1,50 -method mcmc -iter 100  -init_stdev 5  -out /home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/val_set_result_als.csv"
+    "#####  ./ffm-train -p ../../ft_embedding_based_features/ffm/like/val_set.ffm -l 0.00002 --auto-stop -s 16 ../../ft_embedding_based_features/ffm/like/train_set.ffm\n",
+    "##### First check if the text file has already been converted to binary format (0.0 seconds)\n",
+    "##### Binary file NOT found. Convert text file to binary file (1225.5 seconds)\n",
+    "##### First check if the text file has already been converted to binary format (0.0 seconds)\n",
+    "##### Binary file NOT found. Convert text file to binary file (124.2 seconds)\n",
+    "##### iter   tr_logloss   va_logloss      tr_time\n",
+    "#####   1      0.54616      0.51973       1245.2\n",
+    "#####   2      0.44634      0.53376\n",
+    "##### Auto-stop. Use model at 1th iteration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7279054973000604"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21.866958399743076"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/ft_embedding_based_features/ffm/like/val_set_gt.csv',\\\n",
+    "            names = ['ground_truth'])\n",
+    "gt = list(gt_df.ground_truth)\n",
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/ft_embedding_based_features/ffm/like/val_set.output',\\\n",
+    "                      names = ['probability_retweet'])\n",
+    "pr = list(pr_df.probability_retweet)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### ./ffm-train -p ../../ft_embedding_based_features/ffm/like/val_set.ffm -l 0.0002 --auto-stop -s 16 ../../ft_embedding_based_features/ffm/like/train_set.ffm\n",
+    "##### First check if the text file has already been converted to binary format (42.5 seconds)\n",
+    "##### Binary file found. Skip converting text to binary\n",
+    "##### First check if the text file has already been converted to binary format (4.4 seconds)\n",
+    "##### Binary file found. Skip converting text to binary\n",
+    "##### iter   tr_logloss   va_logloss      tr_time\n",
+    "#####   1      0.56770      0.53067       1386.6\n",
+    "#####   2      0.48131      0.51663       2977.4\n",
+    "#####   3      0.42374      0.52042\n",
+    "##### Auto-stop. Use model at 2th iteration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7358037244730462"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22.33252745083927"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
    ]
   }
  ],
